--- a/demo/server-client/package.json
+++ b/demo/server-client/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^10.3.3",
     "nodemon": "^1.17.5"
   },
   "dependencies": {
