--- a/demo/typescript-react-redux/package.json
+++ b/demo/typescript-react-redux/package.json
@@ -14,10 +14,18 @@
   "dependencies": {
     "@types/react": "^16.4.0",
     "@types/react-dom": "^16.0.6",
+    "cuid": "^2.1.1",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.0",
+    "redux-observable": "^1.0.0-beta.2",
+    "reselect": "^3.0.1",
+    "typesafe-actions": "^2.0.4"
   },
   "devDependencies": {
+    "@types/core-js": "^2.5.0",
     "awesome-typescript-loader": "^5.1.1",
     "html-webpack-plugin": "^4.0.0-alpha",
     "html-webpack-template": "^6.2.0",
