--- a/demo/typescript-react-redux/tsconfig.json
+++ b/demo/typescript-react-redux/tsconfig.json
@@ -5,6 +5,16 @@
         "noImplicitAny": true,
         "module": "commonjs",
         "target": "es5",
+        "lib": [
+            "es5",
+            "es6",
+            "es7",
+            "dom"
+        ],
+        "types": [
+            "core-js",
+            "node"
+        ],
         "jsx": "react"
     },
     "include": [
